# nbatch

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
src/nbatch/: __init__.py  _context.py  _decorator.py  _discovery.py  _logging.py  _runner.py  napari.yaml
src/ndev_batch/: __init__.py  _decorator.py  _logging.py  napari.yaml
tests/: test_context.py  test_decorator.py  test_discovery.py  test_logging.py  test_runner.py
