[project]
name = "nbatch"
dynamic = ["version"]
description = "Flexible batch processing utilities"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Tim Monko"},
  {email = "timmonko@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "natsort",
]

[project.optional-dependencies]
napari = [
    "napari",
]
qtpy-backend = [
    "pyqt6",
]
all = [
    "nbatch[napari]",
    "nbatch[qtpy-backed]",
]

[dependency-groups]
dev = [
    "tox-uv",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # Qt testing utilities (qtbot fixture)
    "napari[pyqt6]",  # Include napari and Qt for full test coverage
]

[project.entry-points."napari.manifest"]
nbatch = "nbatch:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/ndev-kit/nbatch/issues"
"Documentation" = "https://github.com/ndev-kit/nbatch#README.md"
"Source Code" = "https://github.com/ndev-kit/nbatch"
"User Support" = "https://github.com/ndev-kit/nbatch/issues"

[build-system]
requires = ["setuptools>=42.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/nbatch/_version.py"
fallback_version = "0.0.1+nogit"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]  # recommended by PP309; deprecation warnings cause failures so leaving for the user to enable if desired
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
format.quote-style = "single"
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. handled by formatter
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]
fix = true
